<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/tools">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/next_Best"
        android:icon="@drawable/ic_fast_forward_new"
        android:title="@string/fast_forward_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/startOver"
        android:icon="@drawable/ic_bin_"
        android:title="@string/start_over_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/helpButton"
        android:icon="@drawable/ic_help_button"
        android:title="@string/help_button"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/updatepButton"
        android:icon="@drawable/ic_help_button"
        android:title="@string/updateButton"
        app:showAsAction="withText|ifRoom" />
</menu>